test-models/src/main/pegasus/com/datahub/test/invalid/MissingRelationshipName.pdl
namespace com.datahub.test.invalid

@Aspect = {
  "name": "invalidAspect"
}
record MissingRelationshipName {
  @Relationship = {
    "entityTypes": []
  }
  foreignKey: string
}